--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,9 @@ dependencies {
     implementation 'com.google.maps:google-maps-services:1.0.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation  'androidx.multidex:multidex:2.0.1'
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'org.apache.commons:commons-lang3:3.0'
 }
