--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.google.maps:google-maps-services:1.0.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation  'androidx.multidex:multidex:2.0.1'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
